# jsoo-react-template

./: .gitignore  LICENSE  Makefile  README.md  dune-project  jsoo-react-template.opam  jsoo-react-template.opam.locked  jsoo-react-template.opam.template  package.json  webpack.config.js
src/: app.ml  dune  main.ml  monaco.ml
