(lang dune 2.9)

(name jsoo-react-template)

(source
 (github ml-in-barcelona/jsoo-react-template))

(license MIT)

(authors "davesnx" "jchavarri")

(maintainers "davesnx" "jchavarri")

(package
 (name jsoo-react-template)
 (synopsis "Project template for jsoo-react")
 (description
  "Template for a minimal jsoo-react project"))
